--- a/.dumi/global.less
+++ b/.dumi/global.less
@@ -20,3 +20,9 @@
     color: #a862ea;
   }
 }
+
+.dumi-default-hero-title > span{
+  background: linear-gradient(30deg, #D6BCFA 30%, #805AD5) !important;
+  background-clip: text !important;
+  color: transparent !important;
+}
