--- a/.dumi/global.css
+++ b/.dumi/global.css
@@ -33,3 +33,8 @@
 .markdown h6 {
   color: #a862ea;
 }
+.dumi-default-hero-title > span {
+  background: linear-gradient(30deg, #D6BCFA 30%, #805AD5) !important;
+  background-clip: text !important;
+  color: transparent !important;
+}
