--- a/.dumi/global.less
+++ b/.dumi/global.less
@@ -21,8 +21,8 @@
   }
 }
 
-.dumi-default-hero-title > span{
-  background: linear-gradient(30deg, #D6BCFA 30%, #805AD5) !important;
-  background-clip: text !important;
-  color: transparent !important;
-}
+// .dumi-default-hero-title > span{
+//   background: linear-gradient(30deg, #D6BCFA 30%, #805AD5) !important;
+//   background-clip: text !important;
+//   color: transparent !important;
+// }
